--- a/multipage_responsive/sass/base/_base.scss
+++ b/multipage_responsive/sass/base/_base.scss
@@ -6,4 +6,7 @@
 
 html {
   font-size: 62.5%;
+  font-family: "Open Sans", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
