--- a/multipage_responsive/sass/components/_topbar.scss
+++ b/multipage_responsive/sass/components/_topbar.scss
@@ -1,7 +1,62 @@
 .topbar {
-  display: inline-block;
   background: $primary-purple;
   width: 100%;
-  height: 20%;
+  height: 25%;
   color: white;
+  text-transform: uppercase;
+  font-weight: 600;
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__left {
+    width: 30%;
+  }
+
+  &__phone {
+    width: 30%;
+    float: left;
+    padding-top: 1rem;
+  }
+
+  &__social {
+    width: 70%;
+    float: right;
+    padding-top: .8rem;
+    font-weight: 400;
+  }
+
+  &__list {
+
+    &-item {
+      display: inline-block;
+      width: 14%;
+      font-size: 1.2rem;
+
+      i {
+        color: white;
+      }
+
+      i:hover {
+        color: $primary-orange;
+      }
+    }
+
+  }
+
+  &__right {
+    align-items: end;
+    padding-top: 1rem;
+
+    a {
+      color: white;
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: $primary-orange;
+    }
+  }
 }
