--- a/multipage_responsive/sass/layout/_header.scss
+++ b/multipage_responsive/sass/layout/_header.scss
@@ -3,5 +3,5 @@
   top: 0;
   width: 100%;
   height: 14rem;
-  display: flex;
+  // display: flex;
 }
